--- a/views/loginResponse.hbs
+++ b/views/loginResponse.hbs
@@ -9,6 +9,6 @@
     <p>Your Username is: {{ yourUsername }}</p>
     <p>Your Password is: {{ yourPassword }}</p>
     <br>
-    <button onclick="window.location.href = '/pages/pa.html';">Continue To Home Page</button>
+    <button onclick="window.location.href = '/getTemp';">Continue To Home Page</button>
 </body
 </html>
